@@ -18,6 +18,7 @@ v 8.12.0 (unreleased)
   - Use Search::GlobalService.new in the `GET /projects/search/:query` endpoint
   - Fix pagination on user snippets page
   - Fix sorting of issues in API
+  - Ensure specs on sorting of issues in API are deterministic on MySQL
   - Escape search term before passing it to Regexp.new !6241 (winniehell)
   - Fix pinned sidebar behavior in smaller viewports !6169
   - Change merge_error column from string to text type
